feat: Adding /md/search endpoint
